--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "hotwire-demo",
   "private": true,
   "dependencies": {
+    "@hotwired/turbo-rails": "^7.0.0-beta.5",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
-    "turbolinks": "^5.2.0"
+    "@tailwindcss/forms": "^0.3.2",
+    "autoprefixer": "^9",
+    "postcss": "^7",
+    "stimulus": "^2.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "version": "0.1.0",
   "devDependencies": {
